apps/longhorn/resources/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
