apps/longhorn/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  labels:
    app: longhorn-ui
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: longhorn-ui
  clusterIP: None
